--- a/ConsertoPraVoce/Views/Shared/_Layout.cshtml
+++ b/ConsertoPraVoce/Views/Shared/_Layout.cshtml
@@ -34,6 +34,66 @@
 		<script src="~/Content/js/respond.min.js"></script>
 	<![endif]-->
 
+	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+	<script src="~/Content/js/jquery.js"></script>
+	<!-- jQuery UI JS -->
+	<script src="~/Content/js/jquery-ui-v1.10.3.js"></script>
+	<!-- Include all compiled plugins (below), or include individual files as needed -->
+	<script src="~/Content/js/bootstrap.min.js"></script>
+	<!-- Sparkline graphs -->
+	<script src="~/Content/js/sparkline.js"></script>
+	<!-- jquery ScrollUp JS -->
+	<script src="js/scrollup/jquery.scrollUp.js"></script>
+	<!-- Flot Charts -->
+	<script src="~/Content/js/flot/jquery.flot.js"></script>
+	<script src="~/Content/js/flot/jquery.flot.tooltip.min.js"></script>
+	<script src="~/Content/js/flot/jquery.flot.resize.min.js"></script>
+	<script src="~/Content/js/flot/jquery.flot.stack.min.js"></script>
+	<script src="~/Content/js/flot/jquery.flot.orderBar.min.js"></script>
+	<script src="~/Content/js/flot/jquery.flot.pie.min.js"></script>
+	<!-- JVector Map -->
+	<script src="~/Content/js/jvectormap/jquery-jvectormap-1.2.2.min.js"></script>
+	<script src="~/Content/js/jvectormap/jquery-jvectormap-usa.js"></script>
+	<!-- Bar Indicator -->
+	<script src="~/Content/js/barIndicator/jquery.easing.1.3.js"></script>
+	<script src="~/Content/js/barIndicator/jquery-barIndicator.js"></script>
+	<script src="~/Content/js/barIndicator/custom-barIndicator.js"></script>
+	<!-- Custom Index -->
+	<script src="~/Content/js/custom.js"></script>
+	<script src="~/Content/js/custom-index.js"></script>
+
+
+
+	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+	<script src="~/Content/js/jquery.js"></script>
+	<!-- Include all compiled plugins (below), or include individual files as needed -->
+	<script src="~/Content/js/bootstrap.min.js"></script>
+	<!-- Sparkline graphs -->
+	<script src="~/Content/js/sparkline.js"></script>
+	<!-- jquery ScrollUp JS -->
+	<script src="~/Contentjs/scrollup/jquery.scrollUp.js"></script>
+	<!-- Data Tables -->
+	<script src="~/Content/js/datatables/dataTables.min.js"></script>
+	<script src="~/Content/js/datatables/dataTables.bootstrap.min.js"></script>
+	<script src="~/Content/js/datatables/dataTables.tableTools.js"></script>
+	<script src="~/Content/js/datatables/autoFill.min.js"></script>
+	<script src="~/Content/js/datatables/autoFill.bootstrap.min.js"></script>
+	<script src="~/Content/js/datatables/fixedHeader.min.js"></script>
+
+	<!-- Download / CSV / Copy / Print -->
+	<script src="~/Content/js/datatables/buttons.min.js"></script>
+	<script src="~/Content/js/datatables/flash.min.js"></script>
+	<script src="~/Content/js/datatables/jszip.min.js"></script>
+	<script src="~/Content/js/datatables/pdfmake.min.js"></script>
+	<script src="~/Content/js/datatables/vfs_fonts.js"></script>
+	<script src="~/Content/js/datatables/html5.min.js"></script>
+	<script src="~/Content/js/datatables/buttons.print.min.js"></script>
+
+	<!-- Custom Data tables -->
+	<script src="~/Content/js/datatables/custom-datatables.js"></script>
+	<!-- Custom Index -->
+	<script src="~/Content/js/custom.js"></script>
+
 </head>
 <body>
 
