--- a/ConsertoPraVoce/Views/Clientes/Index.cshtml
+++ b/ConsertoPraVoce/Views/Clientes/Index.cshtml
@@ -2,8 +2,8 @@
 
 @{
 	ViewBag.Title = "Index";
-	Layout = "~/Views/Shared/_Layout.cshtml";
 }
+
 
 
 <div class="row gutter">
@@ -18,7 +18,7 @@
 					@Html.ActionLink("Cadastrar", "Create", new object { }, new { @class = "btn btn-default" })
 				</p>
 				<div class="table-responsive">
-					<table id="autoFill" class="table table-striped table-bordered no-margin">
+					<table id="copy-print-csv" class="table table-striped table-bordered no-margin">
 						<thead>
 							<tr>
 								<th>
@@ -39,32 +39,9 @@
 								<th>
 									@Html.DisplayNameFor(model => model.Observacao)
 								</th>
-								<th>Opções</th>
+								<th></th>
 							</tr>
 						</thead>
-						<tfoot>
-							<tr>
-								<th>
-									@Html.DisplayNameFor(model => model.Nome)
-								</th>
-								<th>
-									@Html.DisplayNameFor(model => model.Email)
-								</th>
-								<th>
-									@Html.DisplayNameFor(model => model.Telefone1)
-								</th>
-								<th>
-									@Html.DisplayNameFor(model => model.Telefone2)
-								</th>
-								<th>
-									@Html.DisplayNameFor(model => model.Aniversario)
-								</th>
-								<th>
-									@Html.DisplayNameFor(model => model.Observacao)
-								</th>
-								<th>Opções</th>
-							</tr>
-						</tfoot>
 						<tbody>
 							@foreach (var item in Model)
 							{
