--- a/ConsertoPraVoce/Views/Shared/_Layout.cshtml
+++ b/ConsertoPraVoce/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>@ViewBag.Title - My ASP.NET Application</title>
+	<title>@ViewBag.Title - Conserto pra Você</title>
 	@*@Styles.Render("~/Content/css")
 		@Scripts.Render("~/bundles/modernizr")*@
 
@@ -33,45 +33,35 @@
 		<script src="~/Content/js/html5shiv.js"></script>
 		<script src="~/Content/js/respond.min.js"></script>
 	<![endif]-->
-
 	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-	<script src="~/Content/js/jquery.js"></script>
+	<script src="~/Content/js/jquery.js" type="text/javascript"></script>
 	<!-- jQuery UI JS -->
-	<script src="~/Content/js/jquery-ui-v1.10.3.js"></script>
+	<script src="~/Content/js/jquery-ui-v1.10.3.js" type="text/javascript"></script>
 	<!-- Include all compiled plugins (below), or include individual files as needed -->
-	<script src="~/Content/js/bootstrap.min.js"></script>
+	<script src="~/Content/js/bootstrap.min.js" type="text/javascript"></script>
 	<!-- Sparkline graphs -->
-	<script src="~/Content/js/sparkline.js"></script>
+	<script src="~/Content/js/sparkline.js" type="text/javascript"></script>
 	<!-- jquery ScrollUp JS -->
-	<script src="js/scrollup/jquery.scrollUp.js"></script>
+	<script src="~/Content/js/scrollup/jquery.scrollUp.js" type="text/javascript"></script>
 	<!-- Flot Charts -->
-	<script src="~/Content/js/flot/jquery.flot.js"></script>
-	<script src="~/Content/js/flot/jquery.flot.tooltip.min.js"></script>
-	<script src="~/Content/js/flot/jquery.flot.resize.min.js"></script>
-	<script src="~/Content/js/flot/jquery.flot.stack.min.js"></script>
-	<script src="~/Content/js/flot/jquery.flot.orderBar.min.js"></script>
-	<script src="~/Content/js/flot/jquery.flot.pie.min.js"></script>
+	<script src="~/Content/js/flot/jquery.flot.js" type="text/javascript"></script>
+	<script src="~/Content/js/flot/jquery.flot.tooltip.min.js" type="text/javascript"></script>
+	<script src="~/Content/js/flot/jquery.flot.resize.min.js" type="text/javascript"></script>
+	<script src="~/Content/js/flot/jquery.flot.stack.min.js" type="text/javascript"></script>
+	<script src="~/Content/js/flot/jquery.flot.orderBar.min.js" type="text/javascript"></script>
+	<script src="~/Content/js/flot/jquery.flot.pie.min.js" type="text/javascript"></script>
 	<!-- JVector Map -->
-	<script src="~/Content/js/jvectormap/jquery-jvectormap-1.2.2.min.js"></script>
-	<script src="~/Content/js/jvectormap/jquery-jvectormap-usa.js"></script>
+	<script src="~/Content/js/jvectormap/jquery-jvectormap-1.2.2.min.js" type="text/javascript"></script>
+	<script src="~/Content/js/jvectormap/jquery-jvectormap-usa.js" type="text/javascript"></script>
 	<!-- Bar Indicator -->
-	<script src="~/Content/js/barIndicator/jquery.easing.1.3.js"></script>
-	<script src="~/Content/js/barIndicator/jquery-barIndicator.js"></script>
-	<script src="~/Content/js/barIndicator/custom-barIndicator.js"></script>
+	<script src="~/Content/js/barIndicator/jquery.easing.1.3.js" type="text/javascript"></script>
+	<script src="~/Content/js/barIndicator/jquery-barIndicator.js" type="text/javascript"></script>
+	<script src="~/Content/js/barIndicator/custom-barIndicator.js" type="text/javascript"></script>
 	<!-- Custom Index -->
-	<script src="~/Content/js/custom.js"></script>
-	<script src="~/Content/js/custom-index.js"></script>
+	<script src="~/Content/js/custom.js" type="text/javascript"></script>
+	<script src="~/Content/js/custom-index.js" type="text/javascript"></script>
 
 
-
-	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-	<script src="~/Content/js/jquery.js"></script>
-	<!-- Include all compiled plugins (below), or include individual files as needed -->
-	<script src="~/Content/js/bootstrap.min.js"></script>
-	<!-- Sparkline graphs -->
-	<script src="~/Content/js/sparkline.js"></script>
-	<!-- jquery ScrollUp JS -->
-	<script src="~/Contentjs/scrollup/jquery.scrollUp.js"></script>
 	<!-- Data Tables -->
 	<script src="~/Content/js/datatables/dataTables.min.js"></script>
 	<script src="~/Content/js/datatables/dataTables.bootstrap.min.js"></script>
@@ -89,10 +79,12 @@
 	<script src="~/Content/js/datatables/html5.min.js"></script>
 	<script src="~/Content/js/datatables/buttons.print.min.js"></script>
 
-	<!-- Custom Data tables -->
-	<script src="~/Content/js/datatables/custom-datatables.js"></script>
+
 	<!-- Custom Index -->
 	<script src="~/Content/js/custom.js"></script>
+
+	<!-- Custom Data tables -->
+	<script src="~/Content/js/datatables/custom-datatables.js"></script>
 
 </head>
 <body>
@@ -536,33 +528,7 @@
 		</div>
 	</div>
 	<!-- Dashboard Wrapper ends -->
-	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-	<script src="~/Content/js/jquery.js"></script>
-	<!-- jQuery UI JS -->
-	<script src="~/Content/js/jquery-ui-v1.10.3.js"></script>
-	<!-- Include all compiled plugins (below), or include individual files as needed -->
-	<script src="~/Content/js/bootstrap.min.js"></script>
-	<!-- Sparkline graphs -->
-	<script src="~/Content/js/sparkline.js"></script>
-	<!-- jquery ScrollUp JS -->
-	<script src="~/Content/js/scrollup/jquery.scrollUp.js"></script>
-	<!-- Flot Charts -->
-	<script src="~/Content/js/flot/jquery.flot.js"></script>
-	<script src="~/Content/js/flot/jquery.flot.tooltip.min.js"></script>
-	<script src="~/Content/js/flot/jquery.flot.resize.min.js"></script>
-	<script src="~/Content/js/flot/jquery.flot.stack.min.js"></script>
-	<script src="~/Content/js/flot/jquery.flot.orderBar.min.js"></script>
-	<script src="~/Content/js/flot/jquery.flot.pie.min.js"></script>
-	<!-- JVector Map -->
-	<script src="~/Content/js/jvectormap/jquery-jvectormap-1.2.2.min.js"></script>
-	<script src="~/Content/js/jvectormap/jquery-jvectormap-usa.js"></script>
-	<!-- Bar Indicator -->
-	<script src="~/Content/js/barIndicator/jquery.easing.1.3.js"></script>
-	<script src="~/Content/js/barIndicator/jquery-barIndicator.js"></script>
-	<script src="~/Content/js/barIndicator/custom-barIndicator.js"></script>
-	<!-- Custom Index -->
-	<script src="~/Content/js/custom.js"></script>
-	<script src="~/Content/js/custom-index.js"></script>
+	
 
 
 	@*<div class="navbar navbar-inverse navbar-default">
@@ -588,9 +554,12 @@
 		</div>
 
 
-		@Scripts.Render("~/bundles/jquery")
-		@Scripts.Render("~/bundles/bootstrap")
+
+
 	*@
+	@*@Scripts.Render("~/bundles/jquery")*@
+	@*@Scripts.Render("~/bundles/bootstrap")*@
 	@RenderSection("scripts", required: false)
+
 </body>
 </html>
