--- a/ConsertoPraVoce/Views/Clientes/Index.cshtml
+++ b/ConsertoPraVoce/Views/Clientes/Index.cshtml
@@ -18,7 +18,7 @@
 					@Html.ActionLink("Cadastrar", "Create", new object { }, new { @class = "btn btn-default" })
 				</p>
 				<div class="table-responsive">
-					<table id="copy-print-csv" class="table table-striped table-bordered no-margin">
+					<table id="responsiveTable" class="table table-striped table-bordered no-margin">
 						<thead>
 							<tr>
 								<th>
