template e menu fix

--- a/ConsertoPraVoce/Views/Shared/_Layout.cshtml
+++ b/ConsertoPraVoce/Views/Shared/_Layout.cshtml
@@ -308,8 +308,13 @@
 						<span>Analytics</span>
 					</a>
 				</li>
-				<li>
-					@Html.ActionLink("Clientes", "Index", "Clientes")
+                <li>
+                    @Html.ActionLink("Marcas", "Index", "Marcas")
+                </li>
+                <li>
+                    @Html.ActionLink("Clientes", "Index", "Clientes")
+                </li>
+				<li>					
 					<a href='blog.html'>
 						<i class="fa fa-pencil"></i>
 						<span>Blog</span>
