cruds em ingles

--- a/ConsertoPraVoce/Views/Shared/_Layout.cshtml
+++ b/ConsertoPraVoce/Views/Shared/_Layout.cshtml
@@ -309,10 +309,22 @@
 					</a>
 				</li>
                 <li>
-                    @Html.ActionLink("Marcas", "Index", "Marcas")
+                    @Html.ActionLink("Brands", "Index", "Brands")
                 </li>
                 <li>
-                    @Html.ActionLink("Clientes", "Index", "Clientes")
+                    @Html.ActionLink("Clients", "Index", "Clients")
+                </li>
+                <li>
+                    @Html.ActionLink("Device Types", "Index", "DeviceTypes")
+                </li>
+                <li>
+                    @Html.ActionLink("Payment Methods", "Index", "PaymentMethods")
+                </li>
+                <li>
+                    @Html.ActionLink("Services", "Index", "Services")
+                </li>
+                <li>
+                    @Html.ActionLink("Service Prices", "Index", "ServicePrices")
                 </li>
 				<li>					
 					<a href='blog.html'>
