--- a/ConsertoPraVoce/Views/Cliente/Index.cshtml
+++ b/ConsertoPraVoce/Views/Cliente/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<ConsertoPraVoce.Model.Cliente>
 
 @{
-    ViewBag.Title = "Index";
+	ViewBag.Title = "Index";
 }
 
 <div class="row gutter">
@@ -15,65 +15,66 @@
 				<p>
 					@Html.ActionLink("Cadastrar", "Create", new object { }, new { @class = "btn btn-default" })
 				</p>
-				<div class="table-responsive">
-					<table id="copy-print-csv" class="table table-striped table-bordered no-margin">
+				<div class="table-responsive" style="white-space:nowrap;">
+					<table id="responsiveTable" class="table table-striped table-bordered no-margin">
 						<thead>
-                            <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Nome)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Email)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Telefone1)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Telefone2)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.DataNascimento)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Notas)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Data)
-        </th>
-        <th></th>
-    </tr>
-    </thead>
-    <tbody>
+							<tr>
+								<th>
+									@Html.DisplayNameFor(model => model.Nome)
+								</th>
+								<th>
+									@Html.DisplayNameFor(model => model.Email)
+								</th>
+								<th>
+									@Html.DisplayNameFor(model => model.Telefone1)
+								</th>
+								<th>
+									@Html.DisplayNameFor(model => model.Telefone2)
+								</th>
+								<th>
+									@Html.DisplayNameFor(model => model.DataNascimento)
+								</th>
+								<th>
+									@Html.DisplayNameFor(model => model.Notas)
+								</th>
+								<th>
+									@Html.DisplayNameFor(model => model.Data)
+								</th>
+								<th></th>
+							</tr>
+						</thead>
+						<tbody>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Nome)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Email)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Telefone1)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Telefone2)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.DataNascimento)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Notas)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Data)
-        </td>
-        <td>
-            @Html.ActionLink("Editar", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Detalhes", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Deletar", "Delete", new { id=item.Id })
-        </td>
-    </tr>
-}
-</tbody>
-</table>
+							@foreach (var item in Model)
+							{
+								<tr>
+									<td>
+										@Html.DisplayFor(modelItem => item.Nome)
+									</td>
+									<td>
+										@Html.DisplayFor(modelItem => item.Email)
+									</td>
+									<td>
+										@Html.DisplayFor(modelItem => item.Telefone1)
+									</td>
+									<td>
+										@Html.DisplayFor(modelItem => item.Telefone2)
+									</td>
+									<td>
+										@Html.DisplayFor(modelItem => item.DataNascimento)
+									</td>
+									<td>
+										@Html.DisplayFor(modelItem => item.Notas)
+									</td>
+									<td>
+										@Html.DisplayFor(modelItem => item.Data)
+									</td>
+									<td>
+										@Html.ActionLink("Editar", "Edit", new { id = item.Id }) |
+										@Html.ActionLink("Detalhes", "Details", new { id = item.Id }) |
+										@Html.ActionLink("Deletar", "Delete", new { id = item.Id })
+									</td>
+								</tr>
+							}
+						</tbody>
+					</table>
