Ajustes de Layout e demais serviços

--- a/ConsertoPraVoce/Views/Marca/Create.cshtml
+++ b/ConsertoPraVoce/Views/Marca/Create.cshtml
@@ -5,7 +5,7 @@
 }
 
 
-@using (Html.BeginForm("Create", "Marca", FormMethod.Post, new { @class = "form-horizontal" })) 
+@using (Html.BeginForm("Create", "Marca", FormMethod.Post, new { @class = "form-horizontal col-md-5" })) 
 {
     @Html.AntiForgeryToken()
     
