--- a/ConsertoPraVoce/Views/MetodoPagamento/Create.cshtml
+++ b/ConsertoPraVoce/Views/MetodoPagamento/Create.cshtml
@@ -5,7 +5,7 @@
 }
 
 
-@using (Html.BeginForm("Create", "MetodoPagamento", FormMethod.Post, new { @class = "form-horizontal" })) 
+@using (Html.BeginForm("Create", "MetodoPagamento", FormMethod.Post, new { @class = "form-horizontal col-md-5" })) 
 {
     @Html.AntiForgeryToken()
     
@@ -53,12 +53,7 @@
         </div>
 		</fieldset>
     </div>
-}
-
-<div>
-    @Html.ActionLink("Voltar à Lista", "Index")
-</div>
-
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
+	<div>
+		@Html.ActionLink("Voltar à Lista", "Index")
+	</div>
 }
