--- a/ConsertoPraVoce/Views/ModeloAparelho/Index.cshtml
+++ b/ConsertoPraVoce/Views/ModeloAparelho/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<ConsertoPraVoce.Model.Cliente>
+﻿@model IEnumerable<ConsertoPraVoce.Model.ModeloAparelho>
 
 @{
 	ViewBag.Title = "Index";
@@ -8,37 +8,28 @@
 	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 		<div class="panel panel-light">
 			<div class="panel-heading">
-				<h4>Cliente</h4>
+				<h4>Modelos de Aparelhos</h4>
 			</div>
 
 			<div class="panel-body">
 				<p>
 					@Html.ActionLink("Cadastrar", "Create", new object { }, new { @class = "btn btn-default" })
 				</p>
-				<div class="table-responsive" style="white-space:nowrap;">
+				<div class="table-responsive">
 					<table id="responsiveTable" class="table table-striped table-bordered no-margin" data-page-length='25'>
 						<thead>
 							<tr>
 								<th>
-									@Html.DisplayNameFor(model => model.Nome)
+									@Html.DisplayNameFor(model => model.Descricao)
 								</th>
 								<th>
-									@Html.DisplayNameFor(model => model.Email)
+									@Html.DisplayNameFor(model => model.NumeroModelo)
 								</th>
 								<th>
-									@Html.DisplayNameFor(model => model.Telefone1)
+									@Html.DisplayNameFor(model => model.Marca.Descricao)
 								</th>
 								<th>
-									@Html.DisplayNameFor(model => model.Telefone2)
-								</th>
-								<th>
-									@Html.DisplayNameFor(model => model.DataNascimento)
-								</th>
-								<th>
-									@Html.DisplayNameFor(model => model.Notas)
-								</th>
-								<th>
-									@Html.DisplayNameFor(model => model.Data)
+									@Html.DisplayNameFor(model => model.TipoAparelho.Descricao)
 								</th>
 								<th></th>
 							</tr>
@@ -49,25 +40,16 @@
 							{
 								<tr>
 									<td>
-										@Html.DisplayFor(modelItem => item.Nome)
+										@Html.DisplayFor(modelItem => item.Descricao)
 									</td>
 									<td>
-										@Html.DisplayFor(modelItem => item.Email)
+										@Html.DisplayFor(modelItem => item.NumeroModelo)
 									</td>
 									<td>
-										@Html.DisplayFor(modelItem => item.Telefone1)
+										@Html.DisplayFor(modelItem => item.Marca.Descricao)
 									</td>
 									<td>
-										@Html.DisplayFor(modelItem => item.Telefone2)
-									</td>
-									<td>
-										@Html.DisplayFor(modelItem => item.DataNascimento)
-									</td>
-									<td>
-										@Html.DisplayFor(modelItem => item.Notas)
-									</td>
-									<td>
-										@Html.DisplayFor(modelItem => item.Data)
+										@Html.DisplayFor(modelItem => item.TipoAparelho.Descricao)
 									</td>
 									<td>
 										@Html.ActionLink("Editar", "Edit", new { id = item.Id }) |
