--- a/ConsertoPraVoce/Views/Shared/_Layout.cshtml
+++ b/ConsertoPraVoce/Views/Shared/_Layout.cshtml
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html>
+<html lang="pt-br">
 <head>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -77,10 +77,7 @@
 	<script src="~/Content/js/datatables/vfs_fonts.js"></script>
 	<script src="~/Content/js/datatables/html5.min.js"></script>
 	<script src="~/Content/js/datatables/buttons.print.min.js"></script>
-
-
-	<!-- Custom Index -->
-	<script src="~/Content/js/custom.js"></script>
+	
 
 	<!-- Custom Data tables -->
 	<script src="~/Content/js/datatables/custom-datatables.js"></script>
@@ -307,242 +304,88 @@
 						<span>Analytics</span>
 					</a>
 				</li>
-                <li>
-                    <a href="@Url.Action("Index", "CategoriaTransacao")">
-                        <i class="fa fa-list-ul"></i>
-                        <span>Categorias da Transação</span>
-                    </a>                    
-                </li>
-                <li>
-                    <a href="@Url.Action("Index", "Cliente")">
-                        <i class="fa fa-handshake-o"></i>
-                        <span>Clientes</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="@Url.Action("Index", "Conta")">
-                        <i class="fa fa-bank"></i>
-                        <span>Contas</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="@Url.Action("Index", "Marca")">
-                        <i class="fa fa-trademark"></i>
-                        <span>Marcas</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="@Url.Action("Index", "MetodoPagamento")">
-                        <i class="fa fa-credit-card"></i>
-                        <span>Métodos de Pagamento</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="@Url.Action("Index", "OrdemServico")">
-                        <i class="fa fa-check-square-o"></i>
-                        <span>Ordens de Serviço</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="@Url.Action("Index", "PrecoServico")">
-                        <i class="fa fa-money"></i>
-                        <span>Preços de Serviço</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="@Url.Action("Index", "Servico")">
-                        <i class="fa fa-wrench"></i>
-                        <span>Serviços</span>
-                    </a> 
-                </li>
-                <li>
-                    <a href="@Url.Action("Index", "TipoAparelho")">
-                        <i class="fa fa-mobile"></i>
-                        <span>Tipos de Aparelho</span>
-                    </a> 
-                </li>
-                <li>
-                    <a href="@Url.Action("Index", "Transacao")">
-                        <i class="fa fa-retweet"></i>
-                        <span>Transações</span>
-                    </a> 
-                </li>
-                <li>
-                    <a href="@Url.Action("Index", "Usuario")">
-                        <i class="fa fa-user"></i>
-                        <span>Usuários</span>
-                    </a> 
-                </li>
-				<li>					
-					<a href='blog.html'>
-						<i class="fa fa-pencil"></i>
-						<span>Blog</span>
-					</a>
-				</li>
-				<li class='has-sub'>
-					<a href='#'>
-						<i class="fa fa-pie-chart"></i>
-						<span>Graphs</span>
-					</a>
-					<ul>
-						<li>
-							<a href='graphs.html'>
-								<span>Flot Graphs</span>
-							</a>
-						</li>
-						<li>
-							<a href='c3-graphs.html'>
-								<span>C3 Graphs</span>
-							</a>
-						</li>
-					</ul>
-				</li>
-				<li>
-					<a href='timeline.html'>
-						<i class="fa fa-sliders"></i>
-						<span>Timeline</span>
-					</a>
-				</li>
-				<li>
-					<a href='calendar.html'>
-						<i class="fa fa-calendar"></i>
-						<span>Calendar</span>
-					</a>
-				</li>
-				<li>
-					<a href='gallery.html'>
-						<i class="fa fa-image"></i>
-						<span>Gallery</span>
-					</a>
-				</li>
-				<li>
-					<a href='maps.html'>
-						<i class="fa fa-globe"></i>
-						<span>Vector Maps</span>
-					</a>
-				</li>
-				<li class='has-sub'>
-					<a href='#'>
-						<i class="fa fa-flask"></i>
-						<span>Bonus Pages</span>
-					</a>
-					<ul>
-						<li>
-							<a href='invoice.html'>
-								<span>Invoice</span>
-							</a>
-						</li>
-						<li>
-							<a href='profile.html'>
-								<span>Profile</span>
-							</a>
-						</li>
-						<li>
-							<a href="pricing.html">
-								<span>Pricing</span>
-							</a>
-						</li>
-						<li>
-							<a href='login.html'>
-								<span>Login</span>
-							</a>
-						</li>
-						<li>
-							<a href='error.html'>
-								<span>404</span>
-							</a>
-						</li>
-						<li>
-							<a href='basic-template.html'>
-								<span>Basic Template</span>
-							</a>
-						</li>
-					</ul>
-				</li>
-				<li class='has-sub'>
-					<a href='#'>
-						<i class="fa fa-tasks"></i>
-						<span>UI Elements</span>
-					</a>
-					<ul>
-						<li>
-							<a href='buttons.html'>
-								<span>Buttons</span>
-							</a>
-						</li>
-						<li>
-							<a href='panels.html'>
-								<span>Panels</span>
-							</a>
-						</li>
-						<li>
-							<a href='icons.html'>
-								<span>Icons</span>
-							</a>
-						</li>
-						<li>
-							<a href='grid.html'>
-								<span>Grid</span>
-							</a>
-						</li>
-						<li>
-							<a href='components.html'>
-								<span>Components</span>
-							</a>
-						</li>
-						<li>
-							<a href='notifications.html'>
-								<span>Notifications</span>
-							</a>
-						</li>
-						<li>
-							<a href='typography.html'>
-								<span>Typography</span>
-							</a>
-						</li>
-					</ul>
-				</li>
 				<li class='has-sub'>
 					<a href='#'>
 						<i class="fa fa-columns"></i>
-						<span>Forms</span>
+						<span>Categorias</span>
 					</a>
 					<ul>
 						<li>
-							<a href='form-elements.html'>
-								<span>Form Elements</span>
-							</a>
-						</li>
-						<li>
-							<a href='form-layouts.html'>
-								<span>Form Layouts</span>
-							</a>
-						</li>
-						<li>
-							<a href='editor.html'>
-								<span>Editor</span>
+							<a href="@Url.Action("Index", "CategoriaTransacao")">
+								<i class="fa fa-list-ul"></i>
+								<span>Transação</span>
 							</a>
 						</li>
 					</ul>
 				</li>
-				<li class='has-sub'>
-					<a href='#'>
-						<i class="fa fa-bars"></i>
-						<span>Tables</span>
+				<li>
+					<a href="@Url.Action("Index", "Cliente")">
+						<i class="fa fa-handshake-o"></i>
+						<span>Clientes</span>
 					</a>
-					<ul>
-						<li>
-							<a href='tables.html'>
-								<span>Normal Tables</span>
-							</a>
-						</li>
-						<li>
-							<a href='datatables.html'>
-								<span>Data Tables</span>
-							</a>
-						</li>
-					</ul>
 				</li>
+				<li>
+					<a href="@Url.Action("Index", "Conta")">
+						<i class="fa fa-bank"></i>
+						<span>Contas</span>
+					</a>
+				</li>
+				<li>
+					<a href="@Url.Action("Index", "Marca")">
+						<i class="fa fa-trademark"></i>
+						<span>Marcas</span>
+					</a>
+				</li>
+				<li>
+					<a href="@Url.Action("Index", "MetodoPagamento")">
+						<i class="fa fa-credit-card"></i>
+						<span>Pagamentos</span>
+					</a>
+				</li>
+				<li>
+					<a href="@Url.Action("Index", "OrdemServico")">
+						<i class="fa fa-check-square-o"></i>
+						<span>Ordens de Serviço</span>
+					</a>
+				</li>
+				<li>
+					<a href="@Url.Action("Index", "PrecoServico")">
+						<i class="fa fa-money"></i>
+						<span>Preços de Serviço</span>
+					</a>
+				</li>
+				<li>
+					<a href="@Url.Action("Index", "Servico")">
+						<i class="fa fa-wrench"></i>
+						<span>Serviços</span>
+					</a>
+				</li>
+				<li>
+					<a href="@Url.Action("Index", "ModeloAparelho")">
+						<i class="fa fa-mobile"></i>
+						<span>Modelos de Aparelhos</span>
+					</a>
+				</li>
+				<li>
+					<a href="@Url.Action("Index", "TipoAparelho")">
+						<i class="fa fa-mobile"></i>
+						<span>Tipos de Aparelho</span>
+					</a>
+				</li>
+				<li>
+					<a href="@Url.Action("Index", "Transacao")">
+						<i class="fa fa-retweet"></i>
+						<span>Transações</span>
+					</a>
+				</li>
+				<li>
+					<a href="@Url.Action("Index", "Usuario")">
+						<i class="fa fa-user"></i>
+						<span>Usuários</span>
+					</a>
+				</li>
+
+				
 			</ul>
 		</div>
 		<!-- Menu End -->
@@ -592,9 +435,6 @@
 		</div>
 	</div>
 	<!-- Dashboard Wrapper ends -->
-	
-
-
 	@*<div class="navbar navbar-inverse navbar-default">
 			<div class="container">
 				<div class="navbar-header">
