--- a/ConsertoPraVoce/Views/Shared/_Layout.cshtml
+++ b/ConsertoPraVoce/Views/Shared/_Layout.cshtml
@@ -35,7 +35,8 @@
 	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 	<script src="~/Content/js/jquery.js" type="text/javascript"></script>
 	<!-- jQuery UI JS -->
-	<script src="~/Content/js/jquery-ui-v1.10.3.js" type="text/javascript"></script>
+	<script src="~/Content/js/jquery-ui-v1.10.3.js" type="text/javascript"></script>	
+	
 	<!-- Include all compiled plugins (below), or include individual files as needed -->
 	<script src="~/Content/js/bootstrap.min.js" type="text/javascript"></script>
 	<!-- Sparkline graphs -->
@@ -56,9 +57,7 @@
 	<script src="~/Content/js/barIndicator/jquery.easing.1.3.js" type="text/javascript"></script>
 	<script src="~/Content/js/barIndicator/jquery-barIndicator.js" type="text/javascript"></script>
 	<script src="~/Content/js/barIndicator/custom-barIndicator.js" type="text/javascript"></script>
-	<!-- Custom Index -->
-	<script src="~/Content/js/custom.js" type="text/javascript"></script>
-	<script src="~/Content/js/custom-index.js" type="text/javascript"></script>
+	
 
 
 	<!-- Data Tables -->
@@ -77,12 +76,16 @@
 	<script src="~/Content/js/datatables/vfs_fonts.js"></script>
 	<script src="~/Content/js/datatables/html5.min.js"></script>
 	<script src="~/Content/js/datatables/buttons.print.min.js"></script>
-	
+
 
 	<!-- Custom Data tables -->
 	<script src="~/Content/js/datatables/custom-datatables.js"></script>
 
 	<script src="~/Content/js/priceFormat/jquery.priceformat.js"></script>
+
+	<!-- Custom Index -->
+	<script src="~/Content/js/custom.js" type="text/javascript"></script>
+	<script src="~/Content/js/custom-index.js" type="text/javascript"></script>
 
 </head>
 <body>
@@ -274,7 +277,7 @@
 						<li>
 							<a href="profile.html"> <i class="fa fa-calendar"></i> Appointments</a>
 						</li>
-						@*<hr class="less-margin">*@
+						<hr class="less-margin">
 						<li>
 							<a href="#"> <i class="fa fa-sun-o"></i> Account Settings</a>
 						</li>
@@ -287,120 +290,13 @@
 		</div>
 		<!-- Mini right nav ends -->
 	</header>
+
 	<!-- Header ends -->
 	<!-- Left sidebar starts -->
 	<aside id="sidebar">
 		<!-- Menu start -->
 		<div id='menu'>
-			<ul>
-				<li class="highlight">
-					<a href='index.html'>
-						<i class="fa fa-desktop"></i>
-						<span>Dashboard</span>
-						<span class="current-page"></span>
-					</a>
-				</li>
-				<li>
-					<a href='analytics.html'>
-						<i class="fa fa-bar-chart-o"></i>
-						<span>Analytics</span>
-					</a>
-				</li>
-				<li class='has-sub'>
-					<a href='#'>
-						<i class="fa fa-columns"></i>
-						<span>Categorias</span>
-					</a>
-					<ul>
-						<li>
-							<a href="@Url.Action("Index", "CategoriaTransacao")">
-								<i class="fa fa-list-ul"></i>
-								<span>Transação</span>
-							</a>
-						</li>
-					</ul>
-				</li>
-				<li>
-					<a href="@Url.Action("Index", "Fornecedor")">
-						<i class="fa fa-handshake-o"></i>
-						<span>Fornecedores</span>
-					</a>
-				</li>
-				<li>
-					<a href="@Url.Action("Index", "Cliente")">
-						<i class="fa fa-handshake-o"></i>
-						<span>Clientes</span>
-					</a>
-				</li>
-				<li>
-					<a href="@Url.Action("Index", "Conta")">
-						<i class="fa fa-bank"></i>
-						<span>Contas</span>
-					</a>
-				</li>
-				<li>
-					<a href="@Url.Action("Index", "Marca")">
-						<i class="fa fa-trademark"></i>
-						<span>Marcas</span>
-					</a>
-				</li>
-				<li>
-					<a href="@Url.Action("Index", "MetodoPagamento")">
-						<i class="fa fa-credit-card"></i>
-						<span>Pagamentos</span>
-					</a>
-				</li>
-				<li>
-					<a href="@Url.Action("Index", "OrdemServico")">
-						<i class="fa fa-check-square-o"></i>
-						<span>Ordens de Serviço</span>
-					</a>
-				</li>
-				<li>
-					<a href="@Url.Action("Index", "PrecoServico")">
-						<i class="fa fa-money"></i>
-						<span>Preços de Serviço</span>
-					</a>
-				</li>
-				<li>
-					<a href="@Url.Action("Index", "Servico")">
-						<i class="fa fa-wrench"></i>
-						<span>Serviços</span>
-					</a>
-				</li>
-				<li>
-					<a href="@Url.Action("Index", "TipoProduto")">
-						<i class="fa fa-wrench"></i>
-						<span>Tipo de Produtos</span>
-					</a>
-				</li>				
-				<li>
-					<a href="@Url.Action("Index", "ModeloAparelho")">
-						<i class="fa fa-mobile"></i>
-						<span>Modelos de Aparelhos</span>
-					</a>
-				</li>
-				<li>
-					<a href="@Url.Action("Index", "TipoAparelho")">
-						<i class="fa fa-mobile"></i>
-						<span>Tipos de Aparelho</span>
-					</a>
-				</li>
-				<li>
-					<a href="@Url.Action("Index", "Transacao")">
-						<i class="fa fa-retweet"></i>
-						<span>Transações</span>
-					</a>
-				</li>
-				<li>
-					<a href="@Url.Action("Index", "Usuario")">
-						<i class="fa fa-user"></i>
-						<span>Usuários</span>
-					</a>
-				</li>
-
-				
-			</ul>
+			@Html.Partial("_SideMenu")
 		</div>
 		<!-- Menu End -->
 		<!-- Freebies Starts -->
