--- a/ConsertoPraVoce/Views/Home/Index.cshtml
+++ b/ConsertoPraVoce/Views/Home/Index.cshtml
@@ -295,7 +295,7 @@
 							<div class="blog-body">
 								<ul class="chats">
 									<li class="in">
-										<img class="avatar" alt="" src="img/user2.jpg">
+										<img class="avatar" alt="" src="~/Content/img/user2.jpg">
 										<div class="message">
 											<span class="arrow"></span>
 											<a href="#" class="name" data-original-title="" title="">Sandy</a>
@@ -315,7 +315,7 @@
 										</div>
 									</li>
 									<li class="out">
-										<img class="avatar" alt="" src="img/user3.jpg">
+										<img class="avatar" alt="" src="~/Content/img/user3.jpg">
 										<div class="message">
 											<span class="arrow"></span>
 											<a href="#" class="name" data-original-title="" title="">Peter</a>
@@ -328,7 +328,7 @@
 										</div>
 									</li>
 									<li class="in">
-										<img class="avatar" alt="" src="img/user4.jpg">
+										<img class="avatar" alt="" src="~/Content/img/user4.jpg">
 										<div class="message">
 											<span class="arrow"></span>
 											<a href="#" class="name" data-original-title="" title="">Johnson</a>
@@ -354,7 +354,7 @@
 							<div class="blog-body">
 								<ul class="clients-list">
 									<li class="client clearfix">
-										<img src="img/user4.jpg" class="avatar" alt="Client">
+										<img src="~/Content/img/user4.jpg" class="avatar" alt="Client">
 										<div class="client-details">
 											<p>
 												<span class="name">Peter</span>
@@ -380,7 +380,7 @@
 										</div>
 									</li>
 									<li class="client clearfix">
-										<img src="img/user1.jpg" class="avatar" alt="Client">
+										<img src="~/Content/img/user1.jpg" class="avatar" alt="Client">
 										<div class="client-details">
 											<p>
 												<span class="name">Willims</span>
@@ -406,7 +406,7 @@
 										</div>
 									</li>
 									<li class="client clearfix">
-										<img src="img/user2.jpg" class="avatar" alt="Client">
+										<img src="~/Content/img/user2.jpg" class="avatar" alt="Client">
 										<div class="client-details">
 											<p>
 												<span class="name">Henreque</span>
@@ -432,7 +432,7 @@
 										</div>
 									</li>
 									<li class="client clearfix">
-										<img src="img/user3.jpg" class="avatar" alt="Client">
+										<img src="~/Content/img/user3.jpg" class="avatar" alt="Client">
 										<div class="client-details">
 											<p>
 												<span class="name">Samson</span>
@@ -458,7 +458,7 @@
 										</div>
 									</li>
 									<li class="client clearfix">
-										<img src="img/user4.jpg" class="avatar" alt="Client">
+										<img src="~/Content/img/user4.jpg" class="avatar" alt="Client">
 										<div class="client-details">
 											<p>
 												<span class="name">Valli</span>
@@ -484,7 +484,7 @@
 										</div>
 									</li>
 									<li class="client clearfix">
-										<img src="img/user5.jpg" class="avatar" alt="Client">
+										<img src="~/Content/img/user5.jpg" class="avatar" alt="Client">
 										<div class="client-details">
 											<p>
 												<span class="name">Jene</span>
