--- a/ConsertoPraVoce/Views/MetodoPagamento/Details.cshtml
+++ b/ConsertoPraVoce/Views/MetodoPagamento/Details.cshtml
@@ -17,11 +17,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Pagamentos)
+            @Html.DisplayNameFor(model => model.Parcelas)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Pagamentos)
+            @Html.DisplayFor(model => model.Parcelas)
         </dd>
 
         <dt>
@@ -33,11 +33,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Prazo)
+            @Html.DisplayNameFor(model => model.PrazoPagamento)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Prazo)
+            @Html.DisplayFor(model => model.PrazoPagamento)
         </dd>
 
     </dl>
