--- a/ConsertoPraVoce/Views/Transacao/Delete.cshtml
+++ b/ConsertoPraVoce/Views/Transacao/Delete.cshtml
@@ -34,19 +34,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.ValorLiquido)
+            @Html.DisplayNameFor(model => model.PagamentoRecorrente)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.ValorLiquido)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.PagamentoEfetuado)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.PagamentoEfetuado)
+            @Html.DisplayFor(model => model.PagamentoRecorrente)
         </dd>
 
         <dt>
@@ -55,14 +47,6 @@
 
         <dd>
             @Html.DisplayFor(model => model.Detalhes)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.TipoEntrada)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.TipoEntrada)
         </dd>
 
         <dt>
@@ -87,6 +71,22 @@
 
         <dd>
             @Html.DisplayFor(model => model.Conta.Descricao)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Parcelas)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Parcelas)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.OrdemCompra.DescricaoCurta)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.OrdemCompra.DescricaoCurta)
         </dd>
 
         <dt>
