--- a/ConsertoPraVoce/Views/CategoriaTransacao/Create.cshtml
+++ b/ConsertoPraVoce/Views/CategoriaTransacao/Create.cshtml
@@ -1,43 +1,60 @@
 ﻿@model ConsertoPraVoce.Model.CategoriaTransacao
 
 @{
-    ViewBag.Title = "Create";
+	ViewBag.Title = "Create";
 }
 
-
-@using (Html.BeginForm("Create", "CategoriaTransacao", FormMethod.Post, new { @class = "form-horizontal col-md-5" })) 
+@using (Html.BeginForm("Create", "CategoriaTransacao", FormMethod.Post, new { @class = "form-horizontal", @style = "max-width: 800px;" }))
 {
-    @Html.AntiForgeryToken()
-    
-    <div class="row">
-        <h4>CategoriaTransacao</h4>
-        <hr />
+	@Html.AntiForgeryToken()
+
+	<div class="row">
+		<h4>CategoriaTransacao</h4>
+		<hr />
 		<fieldset>
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
-            @Html.LabelFor(model => model.Descricao, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Descricao, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Descricao, "", new { @class = "text-danger" })
-            </div>
-        </div>
+			@Html.ValidationSummary(true, "", new { @class = "text-danger" })
+			<div class="form-group">
+				@Html.LabelFor(model => model.Descricao, htmlAttributes: new { @class = "control-label col-md-2" })
+				<div class="col-md-10">
+					@Html.EditorFor(model => model.Descricao, new { htmlAttributes = new { @class = "form-control" } })
+					@Html.ValidationMessageFor(model => model.Descricao, "", new { @class = "text-danger" })
+				</div>
+			</div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.DescricaoLonga, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.DescricaoLonga, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.DescricaoLonga, "", new { @class = "text-danger" })
-            </div>
-        </div>
+			<div class="form-group">
+				@Html.LabelFor(model => model.TipoDespesa, "TipoDespesa", htmlAttributes: new { @class = "control-label col-md-2" })
+				<div class="col-md-10">
+					@Html.DropDownList("TipoDespesa", null, "Selecionar", htmlAttributes: new { @class = "form-control" })
+					@Html.ValidationMessageFor(model => model.TipoDespesa, "", new { @class = "text-danger" })
+				</div>
+			</div>
 
-        <div class="form-group">
-            <div class="col-md-offset-2 col-lg-6">
-                <input type="submit" value="Salvar" class="btn btn-default" />
-            </div>
-        </div>
+			<div class="form-group">
+				@Html.LabelFor(model => model.DescricaoLonga, htmlAttributes: new { @class = "control-label col-md-2" })
+				<div class="col-md-10">
+					@Html.EditorFor(model => model.DescricaoLonga, new { htmlAttributes = new { @class = "form-control" } })
+					@Html.ValidationMessageFor(model => model.DescricaoLonga, "", new { @class = "text-danger" })
+				</div>
+			</div>
+
+			<div class="form-group">
+				@Html.LabelFor(model => model.IdCategoriaPai, "IdCategoriaPai", htmlAttributes: new { @class = "control-label col-md-2" })
+				<div class="col-md-10">
+					@Html.DropDownList("IdCategoriaPai", null, "Selecionar", htmlAttributes: new { @class = "form-control" })
+					@Html.ValidationMessageFor(model => model.IdCategoriaPai, "", new { @class = "text-danger" })
+				</div>
+			</div>
+
+			<div class="form-group">
+				<div class="col-md-offset-2 col-lg-6">
+					<input type="submit" value="Salvar" class="btn btn-default" />
+				</div>
+			</div>
 		</fieldset>
-    </div>
+	</div>
 	<div>
 		@Html.ActionLink("Voltar à Lista", "Index")
 	</div>
 }
+
+
