--- a/ConsertoPraVoce/Views/CategoriaTransacao/Edit.cshtml
+++ b/ConsertoPraVoce/Views/CategoriaTransacao/Edit.cshtml
@@ -4,12 +4,11 @@
     ViewBag.Title = "Edit";
 }
 
-
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
     
-    <div class="form-horizontal">
+    <div class="form-horizontal" style="max-width: 800px;">
         <h4>CategoriaTransacao</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
@@ -23,6 +22,14 @@
             </div>
         </div>
 
+		<div class="form-group">
+			@Html.LabelFor(model => model.TipoDespesa, "TipoDespesa", htmlAttributes: new { @class = "control-label col-md-2" })
+			<div class="col-md-10">
+				@Html.DropDownList("TipoDespesa", null, "Selecionar", htmlAttributes: new { @class = "form-control" })
+				@Html.ValidationMessageFor(model => model.TipoDespesa, "", new { @class = "text-danger" })
+			</div>
+		</div>
+
         <div class="form-group">
             @Html.LabelFor(model => model.DescricaoLonga, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
@@ -32,13 +39,23 @@
         </div>
 
         <div class="form-group">
+            @Html.LabelFor(model => model.IdCategoriaPai, "IdCategoriaPai", htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.DropDownList("IdCategoriaPai", null, "Selecionar", htmlAttributes: new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.IdCategoriaPai, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Salvar" class="btn btn-default" />
             </div>
         </div>
     </div>
-}
-
 <div>
     @Html.ActionLink("Voltar à Lista", "Index")
 </div>
+
+}
+
+
