--- a/ConsertoPraVoce/Views/CategoriaTransacao/Index.cshtml
+++ b/ConsertoPraVoce/Views/CategoriaTransacao/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<ConsertoPraVoce.Model.CategoriaTransacao>
 
 @{
-    ViewBag.Title = "Index";
+	ViewBag.Title = "Index";
 }
 
 <div class="row gutter">
@@ -16,34 +16,47 @@
 					@Html.ActionLink("Cadastrar", "Create", new object { }, new { @class = "btn btn-default" })
 				</p>
 				<div class="table-responsive">
-					<table id="copy-print-csv" class="table table-striped table-bordered no-margin">
+					<table id="responsiveTable" class="table table-striped table-bordered no-margin" data-page-length='25'>
 						<thead>
-                            <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Descricao)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.DescricaoLonga)
-        </th>
-        <th></th>
-    </tr>
-    </thead>
-    <tbody>
+							<tr>
+								<th>
+									@Html.DisplayNameFor(model => model.Descricao)
+								</th>
+								<th>
+									Categoria Pai
+									@*@Html.DisplayNameFor(model => model.CategoriaTransacao2.Descricao)*@
+								</th>								
+								<th>
+									@Html.DisplayNameFor(model => model.TipoDespesa)
+								</th>
+								<th></th>
+							</tr>
+						</thead>
+						<tbody>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Descricao)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.DescricaoLonga)
-        </td>
-        <td>
-            @Html.ActionLink("Editar", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Detalhes", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Deletar", "Delete", new { id=item.Id })
-        </td>
-    </tr>
-}
-</tbody>
-</table>
+							@foreach (var item in Model)
+							{
+								<tr>
+									<td>
+										@Html.DisplayFor(modelItem => item.Descricao)
+									</td>
+									<td>
+										@Html.DisplayFor(modelItem => item.CategoriaTransacao2.Descricao)
+									</td>
+									<td>
+										@Html.DisplayFor(modelItem => item.TipoDespesa)
+									</td>									
+									<td>
+										@Html.ActionLink("Editar", "Edit", new { id = item.Id }) |
+										@Html.ActionLink("Detalhes", "Details", new { id = item.Id }) |
+										@Html.ActionLink("Deletar", "Delete", new { id = item.Id })
+									</td>
+								</tr>
+							}
+						</tbody>
+					</table>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
