--- a/ConsertoPraVoce/Views/MetodoPagamento/Edit.cshtml
+++ b/ConsertoPraVoce/Views/MetodoPagamento/Edit.cshtml
@@ -4,12 +4,11 @@
     ViewBag.Title = "Edit";
 }
 
-
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
     
-    <div class="form-horizontal">
+    <div class="form-horizontal" style="max-width: 800px;">
         <h4>MetodoPagamento</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
@@ -24,10 +23,10 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Pagamentos, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Parcelas, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Pagamentos, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Pagamentos, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.Parcelas, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Parcelas, "", new { @class = "text-danger" })
             </div>
         </div>
 
@@ -40,10 +39,10 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Prazo, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.PrazoPagamento, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Prazo, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Prazo, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.PrazoPagamento, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.PrazoPagamento, "", new { @class = "text-danger" })
             </div>
         </div>
 
@@ -53,12 +52,10 @@
             </div>
         </div>
     </div>
-}
-
 <div>
     @Html.ActionLink("Voltar à Lista", "Index")
 </div>
 
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
 }
+
+
