--- a/ConsertoPraVoce/Views/MetodoPagamento/Index.cshtml
+++ b/ConsertoPraVoce/Views/MetodoPagamento/Index.cshtml
@@ -16,46 +16,51 @@
 					@Html.ActionLink("Cadastrar", "Create", new object { }, new { @class = "btn btn-default" })
 				</p>
 				<div class="table-responsive">
-					<table id="copy-print-csv" class="table table-striped table-bordered no-margin">
+					<table id="responsiveTable" class="table table-striped table-bordered no-margin" data-page-length='25'>
 						<thead>
                             <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Descricao)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Pagamentos)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Taxa)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Prazo)
-        </th>
-        <th></th>
-    </tr>
-    </thead>
-    <tbody>
+																										<th>
+											@Html.DisplayNameFor(model => model.Descricao)
+										</th>
+																										<th>
+											@Html.DisplayNameFor(model => model.Parcelas)
+										</th>
+																										<th>
+											@Html.DisplayNameFor(model => model.Taxa)
+										</th>
+																										<th>
+											@Html.DisplayNameFor(model => model.PrazoPagamento)
+										</th>
+																										<th></th>
+									</tr>
+									</thead>
+									<tbody>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Descricao)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Pagamentos)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Taxa)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Prazo)
-        </td>
-        <td>
-            @Html.ActionLink("Editar", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Detalhes", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Deletar", "Delete", new { id=item.Id })
-        </td>
-    </tr>
-}
-</tbody>
-</table>
+								@foreach (var item in Model) {
+									<tr>
+																										<td>
+											@Html.DisplayFor(modelItem => item.Descricao)
+										</td>
+																										<td>
+											@Html.DisplayFor(modelItem => item.Parcelas)
+										</td>
+																										<td>
+											@Html.DisplayFor(modelItem => item.Taxa)
+										</td>
+																										<td>
+											@Html.DisplayFor(modelItem => item.PrazoPagamento)
+										</td>
+																										<td>
+											@Html.ActionLink("Editar", "Edit", new { id=item.Id }) |
+											@Html.ActionLink("Detalhes", "Details", new { id=item.Id }) |
+											@Html.ActionLink("Deletar", "Delete", new { id=item.Id })
+										</td>
+																	</tr>
+								}
+					</tbody>
+					</table>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
