--- a/ConsertoPraVoce/Views/Transacao/Create.cshtml
+++ b/ConsertoPraVoce/Views/Transacao/Create.cshtml
@@ -1,122 +1,106 @@
 ﻿@model ConsertoPraVoce.Model.Transacao
 
 @{
-    ViewBag.Title = "Create";
+	ViewBag.Title = "Create";
 }
 
-
-@using (Html.BeginForm("Create", "Transacao", FormMethod.Post, new { @class = "form-horizontal" })) 
+@using (Html.BeginForm("Create", "Transacao", FormMethod.Post, new { @class = "form-horizontal", @style = "max-width: 800px;" }))
 {
-    @Html.AntiForgeryToken()
-    
-    <div class="row">
-        <h4>Transacao</h4>
-        <hr />
+	@Html.AntiForgeryToken()
+
+	<div class="row">
+		<h4>Transacao</h4>
+		<hr />
 		<fieldset>
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
-            @Html.LabelFor(model => model.DataTransacao, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.DataTransacao, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.DataTransacao, "", new { @class = "text-danger" })
-            </div>
-        </div>
+			@Html.ValidationSummary(true, "", new { @class = "text-danger" })
+			<div class="form-group">
+				@Html.LabelFor(model => model.DataTransacao, htmlAttributes: new { @class = "control-label col-md-2" })
+				<div class="col-md-4">
+					@Html.EditorFor(model => model.DataTransacao, new { htmlAttributes = new { @class = "form-control" } })
+					@Html.ValidationMessageFor(model => model.DataTransacao, "", new { @class = "text-danger" })
+				</div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Descricao, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Descricao, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Descricao, "", new { @class = "text-danger" })
-            </div>
-        </div>
+				@Html.LabelFor(model => model.Descricao, htmlAttributes: new { @class = "control-label col-md-2" })
+				<div class="col-md-4">
+					@Html.EditorFor(model => model.Descricao, new { htmlAttributes = new { @class = "form-control" } })
+					@Html.ValidationMessageFor(model => model.Descricao, "", new { @class = "text-danger" })
+				</div>
+			</div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.ValorBruto, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.ValorBruto, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.ValorBruto, "", new { @class = "text-danger" })
-            </div>
-        </div>
+			<div class="form-group">
+				@Html.LabelFor(model => model.ValorBruto, htmlAttributes: new { @class = "control-label col-md-2" })
+				<div class="col-md-4">
+					@Html.EditorFor(model => model.ValorBruto, new { htmlAttributes = new { @class = "form-control" } })
+					@Html.ValidationMessageFor(model => model.ValorBruto, "", new { @class = "text-danger" })
+				</div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.ValorLiquido, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.ValorLiquido, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.ValorLiquido, "", new { @class = "text-danger" })
-            </div>
-        </div>
+				@Html.LabelFor(model => model.IdCategoriaTransacao, htmlAttributes: new { @class = "control-label col-md-2" })
+				<div class="col-md-4">
+					@Html.DropDownList("IdCategoriaTransacao", null, "Selecionar", htmlAttributes: new { @class = "form-control" })
+					@Html.ValidationMessageFor(model => model.IdCategoriaTransacao, "", new { @class = "text-danger" })
+				</div>
+			</div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.IdCategoriaTransacao, "IdCategoriaTransacao", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownList("IdCategoriaTransacao", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.IdCategoriaTransacao, "", new { @class = "text-danger" })
-            </div>
-        </div>
+			<div class="form-group">
+				@Html.LabelFor(model => model.IdCliente, htmlAttributes: new { @class = "control-label col-md-2" })
+				<div class="col-md-4">
+					@Html.DropDownList("IdCliente", null, "Selecionar", htmlAttributes: new { @class = "form-control" })
+					@Html.ValidationMessageFor(model => model.IdCliente, "", new { @class = "text-danger" })
+				</div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.IdCliente, "IdCliente", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownList("IdCliente", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.IdCliente, "", new { @class = "text-danger" })
-            </div>
-        </div>
+				@Html.LabelFor(model => model.Parcelas, htmlAttributes: new { @class = "control-label col-md-2" })
+				<div class="col-md-4">
+					@Html.EditorFor(model => model.Parcelas, new { htmlAttributes = new { @class = "form-control" } })
+					@Html.ValidationMessageFor(model => model.Parcelas, "", new { @class = "text-danger" })
+				</div>
+			</div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.PagamentoEfetuado, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                <div class="checkbox">
-                    @Html.EditorFor(model => model.PagamentoEfetuado)
-                    @Html.ValidationMessageFor(model => model.PagamentoEfetuado, "", new { @class = "text-danger" })
-                </div>
-            </div>
-        </div>
+			<div class="form-group">
+				@Html.LabelFor(model => model.IdConta, htmlAttributes: new { @class = "control-label col-md-2" })
+				<div class="col-md-4">
+					@Html.DropDownList("IdConta", null, "Selecionar", htmlAttributes: new { @class = "form-control" })
+					@Html.ValidationMessageFor(model => model.IdConta, "", new { @class = "text-danger" })
+				</div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Detalhes, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Detalhes, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Detalhes, "", new { @class = "text-danger" })
-            </div>
-        </div>
+				@Html.LabelFor(model => model.PagamentoRecorrente, htmlAttributes: new { @class = "control-label col-md-2" })
+				<div class="col-md-4">
+					@Html.EditorFor(model => model.PagamentoRecorrente)
+					@Html.ValidationMessageFor(model => model.PagamentoRecorrente, "", new { @class = "text-danger" })
+				</div>
+			</div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.IdConta, "IdConta", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownList("IdConta", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.IdConta, "", new { @class = "text-danger" })
-            </div>
-        </div>
+			<div class="form-group">
+				@Html.LabelFor(model => model.IdOrdemCompra, htmlAttributes: new { @class = "control-label col-md-2" })
+				<div class="col-md-4">
+					@Html.DropDownList("IdOrdemCompra", null, "Selecionar", htmlAttributes: new { @class = "form-control" })
+					@Html.ValidationMessageFor(model => model.IdOrdemCompra, "", new { @class = "text-danger" })
+				</div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.IdOrdemServico, "IdOrdemServico", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownList("IdOrdemServico", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.IdOrdemServico, "", new { @class = "text-danger" })
-            </div>
-        </div>
+				@Html.LabelFor(model => model.IdOrdemServico, htmlAttributes: new { @class = "control-label col-md-2" })
+				<div class="col-md-4">
+					@Html.DropDownList("IdOrdemServico", null, "Selecionar", htmlAttributes: new { @class = "form-control" })
+					@Html.ValidationMessageFor(model => model.IdOrdemServico, "", new { @class = "text-danger" })
+				</div>
+			</div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.TipoEntrada, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.TipoEntrada, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.TipoEntrada, "", new { @class = "text-danger" })
-            </div>
-        </div>
+			<div class="form-group">
+				@Html.LabelFor(model => model.Detalhes, htmlAttributes: new { @class = "control-label col-md-2" })
+				<div class="col-md-10">
+					@Html.EditorFor(model => model.Detalhes, new { htmlAttributes = new { @class = "form-control", rows = 5 } })
+					@Html.ValidationMessageFor(model => model.Detalhes, "", new { @class = "text-danger" })
+				</div>
+			</div>
 
-        <div class="form-group">
-            <div class="col-md-offset-2 col-lg-6">
-                <input type="submit" value="Salvar" class="btn btn-default" />
-            </div>
-        </div>
+			<div class="form-group">
+				<div class="col-md-offset-2 col-lg-6">
+					<input type="submit" value="Salvar" class="btn btn-default" />
+				</div>
+			</div>
 		</fieldset>
-    </div>
+	</div>
+	<div>
+		@Html.ActionLink("Voltar à Lista", "Index")
+	</div>
 }
 
-<div>
-    @Html.ActionLink("Voltar à Lista", "Index")
-</div>
 
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-}
