--- a/ConsertoPraVoce/Views/Transacao/Details.cshtml
+++ b/ConsertoPraVoce/Views/Transacao/Details.cshtml
@@ -33,19 +33,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.ValorLiquido)
+            @Html.DisplayNameFor(model => model.PagamentoRecorrente)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.ValorLiquido)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.PagamentoEfetuado)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.PagamentoEfetuado)
+            @Html.DisplayFor(model => model.PagamentoRecorrente)
         </dd>
 
         <dt>
@@ -54,15 +46,7 @@
 
         <dd>
             @Html.DisplayFor(model => model.Detalhes)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.TipoEntrada)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.TipoEntrada)
-        </dd>
+        </dd>  
 
         <dt>
             @Html.DisplayNameFor(model => model.CategoriaTransacao.Descricao)
@@ -86,6 +70,22 @@
 
         <dd>
             @Html.DisplayFor(model => model.Conta.Descricao)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Parcelas)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Parcelas)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.OrdemCompra.DescricaoCurta)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.OrdemCompra.DescricaoCurta)
         </dd>
 
         <dt>
