--- a/ConsertoPraVoce/Views/Transacao/Edit.cshtml
+++ b/ConsertoPraVoce/Views/Transacao/Edit.cshtml
@@ -4,12 +4,11 @@
     ViewBag.Title = "Edit";
 }
 
-
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
     
-    <div class="form-horizontal">
+    <div class="form-horizontal" style="max-width: 800px;">
         <h4>Transacao</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
@@ -40,17 +39,9 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.ValorLiquido, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.ValorLiquido, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.ValorLiquido, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
             @Html.LabelFor(model => model.IdCategoriaTransacao, "IdCategoriaTransacao", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("IdCategoriaTransacao", null, htmlAttributes: new { @class = "form-control" })
+                @Html.DropDownList("IdCategoriaTransacao", null, "Selecionar", htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.IdCategoriaTransacao, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -58,17 +49,23 @@
         <div class="form-group">
             @Html.LabelFor(model => model.IdCliente, "IdCliente", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("IdCliente", null, htmlAttributes: new { @class = "form-control" })
+                @Html.DropDownList("IdCliente", null, "Selecionar", htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.IdCliente, "", new { @class = "text-danger" })
             </div>
         </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.PagamentoEfetuado, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
+		<div class="form-group">
+			@Html.LabelFor(model => model.IdConta, "IdConta", htmlAttributes: new { @class = "control-label col-md-2" })
+			<div class="col-md-4">
+				@Html.DropDownList("IdConta", null, "Selecionar", htmlAttributes: new { @class = "form-control" })
+				@Html.ValidationMessageFor(model => model.IdConta, "", new { @class = "text-danger" })
+			</div>
+		
+            @Html.LabelFor(model => model.PagamentoRecorrente, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-4">
                 <div class="checkbox">
-                    @Html.EditorFor(model => model.PagamentoEfetuado)
-                    @Html.ValidationMessageFor(model => model.PagamentoEfetuado, "", new { @class = "text-danger" })
+                    @Html.EditorFor(model => model.PagamentoRecorrente)
+                    @Html.ValidationMessageFor(model => model.PagamentoRecorrente, "", new { @class = "text-danger" })
                 </div>
             </div>
         </div>
@@ -76,32 +73,34 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Detalhes, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Detalhes, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.Detalhes, new { htmlAttributes = new { @class = "form-control", rows = 5 } })
                 @Html.ValidationMessageFor(model => model.Detalhes, "", new { @class = "text-danger" })
             </div>
         </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.IdConta, "IdConta", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownList("IdConta", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.IdConta, "", new { @class = "text-danger" })
-            </div>
-        </div>
+       
 
         <div class="form-group">
             @Html.LabelFor(model => model.IdOrdemServico, "IdOrdemServico", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("IdOrdemServico", null, htmlAttributes: new { @class = "form-control" })
+                @Html.DropDownList("IdOrdemServico", null, "Selecionar", htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.IdOrdemServico, "", new { @class = "text-danger" })
+            </div>
+        </div>        
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.IdOrdemCompra, "IdOrdemCompra", htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.DropDownList("IdOrdemCompra", null, "Selecionar", htmlAttributes: new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.IdOrdemCompra, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.TipoEntrada, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Parcelas, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.TipoEntrada, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.TipoEntrada, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.Parcelas, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Parcelas, "", new { @class = "text-danger" })
             </div>
         </div>
 
@@ -111,12 +110,10 @@
             </div>
         </div>
     </div>
-}
-
 <div>
     @Html.ActionLink("Voltar à Lista", "Index")
 </div>
 
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
 }
+
+
