--- a/ConsertoPraVoce/Views/Shared/EditorTemplates/Decimal.cshtml
+++ b/ConsertoPraVoce/Views/Shared/EditorTemplates/Decimal.cshtml
@@ -13,7 +13,7 @@
 		$("#@idOriginal").priceFormat({
 			prefix: '',
 			centsSeparator: ',',
-			thousandsSeparator: ''
+			thousandsSeparator: '.'
 		});
 
 	});
