--- a/ConsertoPraVoce/Views/Transacao/Edit.cshtml
+++ b/ConsertoPraVoce/Views/Transacao/Edit.cshtml
@@ -14,95 +14,83 @@
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.Id)
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.DataTransacao, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.DataTransacao, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.DataTransacao, "", new { @class = "text-danger" })
-            </div>
-        </div>
+		<div class="form-group">
+			@Html.LabelFor(model => model.DataTransacao, htmlAttributes: new { @class = "control-label col-md-2" })
+			<div class="col-md-4">
+				@Html.EditorFor(model => model.DataTransacao, new { htmlAttributes = new { @class = "form-control" } })
+				@Html.ValidationMessageFor(model => model.DataTransacao, "", new { @class = "text-danger" })
+			</div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Descricao, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Descricao, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Descricao, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.ValorBruto, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.ValorBruto, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.ValorBruto, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.IdCategoriaTransacao, "IdCategoriaTransacao", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownList("IdCategoriaTransacao", null, "Selecionar", htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.IdCategoriaTransacao, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.IdCliente, "IdCliente", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownList("IdCliente", null, "Selecionar", htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.IdCliente, "", new { @class = "text-danger" })
-            </div>
-        </div>
+			@Html.LabelFor(model => model.Descricao, htmlAttributes: new { @class = "control-label col-md-2" })
+			<div class="col-md-4">
+				@Html.EditorFor(model => model.Descricao, new { htmlAttributes = new { @class = "form-control" } })
+				@Html.ValidationMessageFor(model => model.Descricao, "", new { @class = "text-danger" })
+			</div>
+		</div>
 
 		<div class="form-group">
-			@Html.LabelFor(model => model.IdConta, "IdConta", htmlAttributes: new { @class = "control-label col-md-2" })
+			@Html.LabelFor(model => model.ValorBruto, htmlAttributes: new { @class = "control-label col-md-2" })
+			<div class="col-md-4">
+				@Html.EditorFor(model => model.ValorBruto, new { htmlAttributes = new { @class = "form-control" } })
+				@Html.ValidationMessageFor(model => model.ValorBruto, "", new { @class = "text-danger" })
+			</div>
+
+			@Html.LabelFor(model => model.IdCategoriaTransacao, htmlAttributes: new { @class = "control-label col-md-2" })
+			<div class="col-md-4">
+				@Html.DropDownList("IdCategoriaTransacao", null, "Selecionar", htmlAttributes: new { @class = "form-control" })
+				@Html.ValidationMessageFor(model => model.IdCategoriaTransacao, "", new { @class = "text-danger" })
+			</div>
+		</div>
+
+		<div class="form-group">
+			@Html.LabelFor(model => model.IdCliente, htmlAttributes: new { @class = "control-label col-md-2" })
+			<div class="col-md-4">
+				@Html.DropDownList("IdCliente", null, "Selecionar", htmlAttributes: new { @class = "form-control" })
+				@Html.ValidationMessageFor(model => model.IdCliente, "", new { @class = "text-danger" })
+			</div>
+
+			@Html.LabelFor(model => model.Parcelas, htmlAttributes: new { @class = "control-label col-md-2" })
+			<div class="col-md-4">
+				@Html.EditorFor(model => model.Parcelas, new { htmlAttributes = new { @class = "form-control" } })
+				@Html.ValidationMessageFor(model => model.Parcelas, "", new { @class = "text-danger" })
+			</div>
+		</div>
+
+		<div class="form-group">
+			@Html.LabelFor(model => model.IdConta, htmlAttributes: new { @class = "control-label col-md-2" })
 			<div class="col-md-4">
 				@Html.DropDownList("IdConta", null, "Selecionar", htmlAttributes: new { @class = "form-control" })
 				@Html.ValidationMessageFor(model => model.IdConta, "", new { @class = "text-danger" })
 			</div>
-		
-            @Html.LabelFor(model => model.PagamentoRecorrente, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-4">
-                <div class="checkbox">
-                    @Html.EditorFor(model => model.PagamentoRecorrente)
-                    @Html.ValidationMessageFor(model => model.PagamentoRecorrente, "", new { @class = "text-danger" })
-                </div>
-            </div>
-        </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Detalhes, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Detalhes, new { htmlAttributes = new { @class = "form-control", rows = 5 } })
-                @Html.ValidationMessageFor(model => model.Detalhes, "", new { @class = "text-danger" })
-            </div>
-        </div>
+			@Html.LabelFor(model => model.PagamentoRecorrente, htmlAttributes: new { @class = "control-label col-md-2" })
+			<div class="col-md-4">
+				@Html.EditorFor(model => model.PagamentoRecorrente)
+				@Html.ValidationMessageFor(model => model.PagamentoRecorrente, "", new { @class = "text-danger" })
+			</div>
+		</div>
 
-       
+		<div class="form-group">
+			@Html.LabelFor(model => model.IdOrdemCompra, htmlAttributes: new { @class = "control-label col-md-2" })
+			<div class="col-md-4">
+				@Html.DropDownList("IdOrdemCompra", null, "Selecionar", htmlAttributes: new { @class = "form-control" })
+				@Html.ValidationMessageFor(model => model.IdOrdemCompra, "", new { @class = "text-danger" })
+			</div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.IdOrdemServico, "IdOrdemServico", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownList("IdOrdemServico", null, "Selecionar", htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.IdOrdemServico, "", new { @class = "text-danger" })
-            </div>
-        </div>        
+			@Html.LabelFor(model => model.IdOrdemServico, htmlAttributes: new { @class = "control-label col-md-2" })
+			<div class="col-md-4">
+				@Html.DropDownList("IdOrdemServico", null, "Selecionar", htmlAttributes: new { @class = "form-control" })
+				@Html.ValidationMessageFor(model => model.IdOrdemServico, "", new { @class = "text-danger" })
+			</div>
+		</div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.IdOrdemCompra, "IdOrdemCompra", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownList("IdOrdemCompra", null, "Selecionar", htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.IdOrdemCompra, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Parcelas, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Parcelas, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Parcelas, "", new { @class = "text-danger" })
-            </div>
-        </div>
+		<div class="form-group">
+			@Html.LabelFor(model => model.Detalhes, htmlAttributes: new { @class = "control-label col-md-2" })
+			<div class="col-md-10">
+				@Html.EditorFor(model => model.Detalhes, new { htmlAttributes = new { @class = "form-control", rows = 5 } })
+				@Html.ValidationMessageFor(model => model.Detalhes, "", new { @class = "text-danger" })
+			</div>
+		</div>
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
