tela de Ordem de Compra

--- a/ConsertoPraVoce/Views/Produto/Index.cshtml
+++ b/ConsertoPraVoce/Views/Produto/Index.cshtml
@@ -20,13 +20,16 @@
 						<thead>
 							<tr>
 								<th>
-									@Html.DisplayNameFor(model => model.ModeloAparelho.Descricao)
+									@*@Html.DisplayNameFor(model => model.ModeloAparelho.Descricao)*@
+									Modelo
 								</th>
 								<th>
-									@Html.DisplayNameFor(model => model.TipoProduto.Descricao)
+									@*@Html.DisplayNameFor(model => model.TipoProduto.Descricao)*@
+									Tipo
 								</th>
 								<th>
-									@Html.DisplayNameFor(model => model.Cor.Descricao)
+									@*@Html.DisplayNameFor(model => model.Cor.Descricao)*@
+									Cor
 								</th>
 								<th>
 									@Html.DisplayNameFor(model => model.Descricao)
