--- a/ConsertoPraVoce/Views/Shared/_Layout.cshtml
+++ b/ConsertoPraVoce/Views/Shared/_Layout.cshtml
@@ -77,6 +77,8 @@
 	<script src="~/Content/js/datatables/html5.min.js"></script>
 	<script src="~/Content/js/datatables/buttons.print.min.js"></script>
 
+	<!--tableToJSON-->
+	<script src="~/Content/js/jquery.tabletojson.min.js"></script>	
 
 	<!-- Custom Data tables -->
 	<script src="~/Content/js/datatables/custom-datatables.js"></script>
