--- a/ConsertoPraVoce/Views/OrdemCompra/Delete.cshtml
+++ b/ConsertoPraVoce/Views/OrdemCompra/Delete.cshtml
@@ -4,6 +4,12 @@
     ViewBag.Title = "Delete";
 }
 
+<script type="text/javascript">
+	$(function () {
+		definirNomeTela("Excluir Ordem de Compra");
+	});
+</script>
+
 <h3>Tem certeza que deseja deletar este registro?</h3>
 <div>
     <h4>OrdemCompra</h4>
