--- a/ConsertoPraVoce/Views/OrdemCompra/Details.cshtml
+++ b/ConsertoPraVoce/Views/OrdemCompra/Details.cshtml
@@ -4,6 +4,12 @@
     ViewBag.Title = "Details";
 }
 
+<script type="text/javascript">
+	$(function () {
+		definirNomeTela("Detalhes Ordem de Compra");
+	});
+</script>
+
 <div>
     <h4>OrdemCompra</h4>
     <hr />
