--- a/ConsertoPraVoce/Views/Cliente/Create.cshtml
+++ b/ConsertoPraVoce/Views/Cliente/Create.cshtml
@@ -3,9 +3,35 @@
 @{
 	ViewBag.Title = "Create";
 }
+<script>
+	$(document).ready(function () {
+		buscarMarcas();
+	});
+	function buscarMarcas() {
+		$.getJSON('@Url.Action("BuscarMarcas", "OrdemCompra")', function (result) {
+			$("#ddlMarca").html(""); // makes select null before filling process
+			var data = result.data;
+			for (var i = 0; i < data.length; i++) {
+				$("#ddlMarca").append("<option value=" + data[i].Value + ">" + data[i].Text + "</option>")
+			}
+			buscarModelosAparelhos($("#ddlMarca").val());
+		})
 
+	}
 
-@using (Html.BeginForm("Create", "Cliente", FormMethod.Post, new { @class = "form-horizontal", @style= "max-width: 800px;" }))
+	function buscarModelosAparelhos(value) {
+		$.getJSON('@Url.Action("BuscarModelosAparelhos", "OrdemCompra")' + "?idMarca=" + value, function (result) {
+			$("#IdModeloAparelho").html(""); // makes select null before filling process
+			var data = result.data;
+			$("#IdModeloAparelho").append("<option value=\"null\">" + "Selecionar" + "</option>")
+			for (var i = 0; i < data.length; i++) {
+				$("#IdModeloAparelho").append("<option value=" + data[i].Value + ">" + data[i].Text + "</option>")
+			}
+		})
+	}
+</script>
+
+@using (Html.BeginForm("Create", "Cliente", FormMethod.Post, new { @class = "form-horizontal col-md-12 col-lg-7" }))
 {
 	@Html.AntiForgeryToken()
 
@@ -33,7 +59,7 @@
 			<div class="form-group">
 				@Html.LabelFor(model => model.Telefone1, htmlAttributes: new { @class = "control-label col-md-2" })
 				<div class="col-md-4">
-					@Html.EditorFor(model => model.Telefone1, new { htmlAttributes = new { @class = "form-control" }  })
+					@Html.EditorFor(model => model.Telefone1, new { htmlAttributes = new { @class = "form-control" } })
 					@Html.ValidationMessageFor(model => model.Telefone1, "", new { @class = "text-danger" })
 				</div>
 
@@ -56,6 +82,18 @@
 					@Html.ValidationMessageFor(model => model.Data, "", new { @class = "text-danger" })
 				</div>
 			</div>
+			<div class="form-group">
+				<label class="control-label col-md-2">Marca</label>
+				<div class="col-md-4">
+					<select class="form-control" id="ddlMarca" onchange="javascript:buscarModelosAparelhos(this.value);"></select>
+				</div>
+
+				@Html.LabelFor(model => model.IdModeloAparelho, htmlAttributes: new { @class = "control-label col-md-2" })
+				<div class="col-md-4">
+					@Html.DropDownList("IdModeloAparelho", null, "Selecionar", htmlAttributes: new { @class = "form-control" })
+					@Html.ValidationMessageFor(model => model.IdModeloAparelho, "", new { @class = "text-danger" })
+				</div>
+			</div>
 
 			<div class="form-group">
 				@Html.LabelFor(model => model.Notas, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -65,8 +103,6 @@
 				</div>
 			</div>
 
-
-
 			<div class="form-group">
 				<div class="col-md-offset-2 col-lg-6">
 					<input type="submit" value="Salvar" class="btn btn-default" />
@@ -75,9 +111,9 @@
 		</fieldset>
 	</div>
 
-	<div>
-		@Html.ActionLink("Voltar à Lista", "Index")
-	</div>
+			<div>
+				@Html.ActionLink("Voltar à Lista", "Index")
+			</div>
 
 }
 
