--- a/ConsertoPraVoce/Views/OrdemCompra/Index.cshtml
+++ b/ConsertoPraVoce/Views/OrdemCompra/Index.cshtml
@@ -4,12 +4,15 @@
     ViewBag.Title = "Index";
 }
 
+<script type="text/javascript">
+	$(function () {
+		definirNomeTela("Ordens de Compra");
+	});
+</script>
+
 <div class="row gutter">
-	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-		<div class="panel panel-light">
-			<div class="panel-heading">
-				<h4>OrdemCompra</h4>
-			</div>
+	<div class="">
+		<div class="panel panel-light">			
 
 			<div class="panel-body">
 				<p>
