--- a/ConsertoPraVoce/Views/Shared/EditorTemplates/DateTime.cshtml
+++ b/ConsertoPraVoce/Views/Shared/EditorTemplates/DateTime.cshtml
@@ -2,7 +2,7 @@
 
 
 <div class='input-group date' id=''>
-	@Html.TextBox("", Model.HasValue ? Model.Value.ToString("d") : String.Empty, new { @class = "form-control" })
+	@Html.TextBox("", Model.HasValue ? Model.Value.ToString("dd/MM/yyy HH:mm") : String.Empty, new { @class = "form-control" })
 	@*<input type='text' class="form-control" />*@
 	<span class="input-group-addon">
 		<span class="glyphicon glyphicon-calendar"></span>
