--- a/ConsertoPraVoce/Views/Shared/_Layout.cshtml
+++ b/ConsertoPraVoce/Views/Shared/_Layout.cshtml
@@ -21,12 +21,12 @@
 	<!-- Font Awesome -->
 	<link href="~/Content/fonts/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" />
 
-
 	<!-- Data Tables -->
 	<link href="~/Content/css/datatables/dataTables.bs.min.css" rel="stylesheet" />
 	<link href="~/Content/css/datatables/autoFill.bs.min.css" rel="stylesheet" />
 	<link href="~/Content/css/datatables/fixedHeader.bs.css" rel="stylesheet" />
 	<link href="~/Content/css/datatables/buttons.bs.css" rel="stylesheet" />
+
 	<!-- HTML5 shiv and Respond.js IE8 support of HTML5 elements and media queries -->
 	<!--[if lt IE 9]>
 		<script src="~/Content/js/html5shiv.js"></script>
@@ -78,24 +78,22 @@
 	<script src="~/Content/js/datatables/buttons.print.min.js"></script>
 
 	<!--tableToJSON-->
-	<script src="~/Content/js/jquery.tabletojson.min.js"></script>	
+	<script src="~/Content/js/jquery.tabletojson.min.js"></script>
 
 	<!-- Custom Data tables -->
 	<script src="~/Content/js/datatables/custom-datatables.js"></script>
 
 	<script src="~/Content/js/priceFormat/jquery.priceformat.js"></script>
 
-	<!-- Custom Index -->
-	<script src="~/Content/js/custom.js" type="text/javascript"></script>
-	<script src="~/Content/js/custom-index.js" type="text/javascript"></script>
 
-	
+
+
 	@*<script type="text/javascript" src="~/Scripts/jquery-3.3.1.js"></script>*@
 	<script type="text/javascript" src="~/Scripts/moment-with-locales.js"></script>
 	<script type="text/javascript" src="~/Scripts/bootstrap.min.js"></script>
 	<script type="text/javascript" src="~/Scripts/bootstrap-datetimepicker.min.js"></script>
 	@*<script type="text/javascript" src="~/Scripts/bootstrap-datetimepicker.js"></script>*@
-	
+
 
 	<link rel="stylesheet" href="~/Content/bootstrap-datetimepicker.css" />
 
@@ -343,9 +341,43 @@
 		</div>
 		<!-- Freebies Starts -->
 	</aside>
+
+	<script>
+		function definirNomeTela(value) {
+			$("#nomeTela").text(value);
+		}
+	</script>
+
 	<!-- Left sidebar ends -->
 	<!-- Dashboard Wrapper starts -->
 	<div class="dashboard-wrapper">
+		<div class="top-bar">
+			@Html.ActionLink("Voltar", "Index")
+			<div class="page-title">
+				<span id="nomeTela"></span>
+			</div>
+			<ul class="stats hidden-xs">
+				<li>
+					<div class="stats-block hidden-sm hidden-xs">
+						<span id="downloads_graph"></span>
+					</div>
+					<div class="stats-details">
+						<h4>$<span id="today_income">580</span> <i class="fa fa-chevron-up up"></i></h4>
+						<h5>Today's Income</h5>
+					</div>
+				</li>
+				<li>
+					<div class="stats-block hidden-sm hidden-xs">
+						<span id="users_online_graph"></span>
+					</div>
+					<div class="stats-details">
+						<h4>$<span id="today_expenses">235</span> <i class="fa fa-chevron-down down"></i></h4>
+						<h5>Today's Expenses</h5>
+					</div>
+				</li>
+			</ul>
+		</div>
+		<!-- Top Bar ends -->
 		<div class="main-container">
 			<!-- Container fluid Starts -->
 			<div class="container-fluid">
@@ -379,12 +411,20 @@
 			</div>
 		</div>
 
-
-
-
 	*@
+
 	@*@Scripts.Render("~/bundles/jquery")*@
-	@*@Scripts.Render("~/bundles/bootstrap")*@
+
+
+
+	@Scripts.Render("~/bundles/bootstrap")
+	<!-- Custom Index -->
+	<script src="~/Content/js/custom.js" type="text/javascript"></script>
+	<script src="~/Content/js/custom-index.js" type="text/javascript"></script>
+
+
+
+
 	@RenderSection("scripts", required: false)
 
 </body>
