Tela de Tarefas e ajustes de layout

--- a/ConsertoPraVoce/Views/Shared/_Layout.cshtml
+++ b/ConsertoPraVoce/Views/Shared/_Layout.cshtml
@@ -105,7 +105,9 @@
 		<!-- Logo starts -->
 		<div class="logo">
 			<a href="#">
-				<img src="~/Content/img/logo.png" alt="logo">
+				<span>
+					<img src="~/Content/img/logo.png" alt="logo" onclick="location.href = 'Home';">
+				</span>
 				<span class="menu-toggle hidden-xs">
 					<i class="fa fa-bars"></i>
 				</span>
