--- a/ConsertoPraVoce/Views/Cliente/Edit.cshtml
+++ b/ConsertoPraVoce/Views/Cliente/Edit.cshtml
@@ -5,7 +5,7 @@
 }
 <script>
 	$(document).ready(function () {
-		buscarMarcas();
+		//buscarMarcas();
 	});
 	function buscarMarcas() {
 		$.getJSON('@Url.Action("BuscarMarcas", "OrdemCompra")', function (result) {
