--- a/ConsertoPraVoce/Views/OrdemCompra/Create.cshtml
+++ b/ConsertoPraVoce/Views/OrdemCompra/Create.cshtml
@@ -15,11 +15,11 @@
 			thousandsSeparator: '.'
 		});
 
-		$("#txtValor").priceFormat({
-			prefix: '',
-			centsSeparator: ',',
-			thousandsSeparator: '.'
-		});
+		//$("#txtValor").priceFormat({
+		//	prefix: '',
+		//	centsSeparator: ',',
+		//	thousandsSeparator: '.'
+		//});
 
 		$("#btnSave").on('click', function () {
 			var tabelaProdutos = gerarJsonFromTabela();
@@ -137,10 +137,6 @@
 
 		})
 	}
-
-
-
-
 
 
 	function atualizarTotalLinha() {
