--- a/ConsertoPraVoce/Views/Cliente/Create.cshtml
+++ b/ConsertoPraVoce/Views/Cliente/Create.cshtml
@@ -90,7 +90,7 @@
 
 				@Html.LabelFor(model => model.IdModeloAparelho, htmlAttributes: new { @class = "control-label col-md-2" })
 				<div class="col-md-4">
-					@Html.DropDownList("IdModeloAparelho", null, "Selecionar", htmlAttributes: new { @class = "form-control" })
+					@Html.DropDownListFor(model => model.IdModeloAparelho, null, "Selecionar", htmlAttributes: new { @class = "form-control" })
 					@Html.ValidationMessageFor(model => model.IdModeloAparelho, "", new { @class = "text-danger" })
 				</div>
 			</div>
