--- a/ConsertoPraVoce/Views/Cliente/Index.cshtml
+++ b/ConsertoPraVoce/Views/Cliente/Index.cshtml
@@ -15,7 +15,7 @@
 				<p>
 					@Html.ActionLink("Cadastrar", "Create", new object { }, new { @class = "btn btn-default" })
 				</p>
-				<div class="table-responsive" >
+				<div class="table-responsive">
 					<table id="responsiveTable" class="table table-striped table-bordered no-margin" data-page-length='25'>
 						<thead>
 							<tr>
@@ -23,8 +23,8 @@
 									@Html.DisplayNameFor(model => model.Nome)
 								</th>
 								@*<th>
-									@Html.DisplayNameFor(model => model.Email)
-								</th>*@
+										@Html.DisplayNameFor(model => model.Email)
+									</th>*@
 								<th>
 									@Html.DisplayNameFor(model => model.Telefone1)
 								</th>
@@ -52,22 +52,26 @@
 										@Html.DisplayFor(modelItem => item.Nome)
 									</td>
 									@*<td>
-										@Html.DisplayFor(modelItem => item.Email)
-									</td>*@
+											@Html.DisplayFor(modelItem => item.Email)
+										</td>*@
 									<td style="white-space:nowrap;">
 										@Html.DisplayFor(modelItem => item.Telefone1)
 									</td>
 									<td style="white-space:nowrap;">
 										@Html.DisplayFor(modelItem => item.Telefone2)
 									</td>
-									<td>
+									<td style="white-space:nowrap;">
 										@Html.DisplayFor(modelItem => item.ModeloAparelho.Descricao)
 									</td>
 									<td>
 										@Html.DisplayFor(modelItem => item.Notas)
 									</td>
 									<td>
-										@Html.DisplayFor(modelItem => item.Data)
+										@if (item.Data.HasValue)
+										{
+											@*<span style="visibility:hidden; height:0px" > @item.Data.Value.ToString("yyyyMMddHHmmss")</span>*@
+											@item.Data.Value.ToString("dd/MM/yyyy");
+										}
 									</td>
 									<td style="white-space:nowrap;">
 										@Html.ActionLink("Editar", "Edit", new { id = item.Id }) |
